[refactor] Seperating product upload image from create & update product endpoints
